--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
     "react-dom": "^17.0.2",
     "react-scripts": "^4.0.3"
   },
+  "homepage": "https://matheusfacciolla.github.io/projeto7-instagram-react",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "eslintConfig": {
     "extends": [
@@ -29,5 +32,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^3.2.3"
   }
 }
